# AmeKanji

./: .gitignore  CMakeLists.txt  README.md  file.xml  file2.xml  todo  todo.txt
.github/workflows/: cmake.yml  tmp.yml  ubuntu-latest.yml  windows-latest.yml  windows.yml
Repository/freq/: wordfreq_ck.utf8
Repository/kanji/: kanjidic.utf8  kanjidic_es.utf8
Repository/krad/: kradfile.utf8  radkfile.utf8  radkfilex.utf8
Repository/vocab/: hispadic.utf8
src/: CMakeLists.txt  examples.cpp  main.cpp
src/Ame/: Ame.cpp  Ame.h  AmeConfig.h  AmeLoad.cpp  CMakeLists.txt  ErrorCodes.h  Kanji.h  StatusCodes.h  Word.h  layout.txt  outputMessages.h
src/Ame/Cards/: CMakeLists.txt  Card.h  Default.cpp  Default.h  Kanji.cpp  Kanji.h  Word.cpp  Word.h
src/Ame/Cards/Deck/: CMakeLists.txt  Deck.cpp  Deck.h
src/Ame/Cards/Template/: CMakeLists.txt  Template.h  TemplateRenderer.cpp  TemplateRenderer.h
src/Ame/Jisho/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  EventChain.h  JMDict.cpp  JMDict.h  Kanjidict.cpp  Kanjidict.h  Librarian.h  Library.cpp  Library.h  Vocabdict.cpp  Vocabdict.h
src/Ame/Jisho/Parsers/: CMakeLists.txt  Default.cpp  Default.h  Dictionary.cpp  Dictionary.h  Edict.cpp  Edict.h  JMdict.cpp  JMdict.h  Kanjidic.cpp  Kanjidic.h  NewKanjidic.cpp  NewKanjidic.h
src/Ame/Jisho/Regex/: CMakeLists.txt  Regex.cpp  Regex.h  RegexParser.h
src/Ame/Regex/: Regex.h
src/Ame/Web/: AmeWeb.h  CMakeLists.txt
src/Core/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
src/Core/Regex/: Regex.h
src/examples/: invoke:regex.cpp
tests/: CMakeLists.txt  test_eventchain.cpp  test_jisho.cpp  test_librarian.cpp  test_library.cpp  test_regex.cpp  test_second.cpp  test_template.cpp
tests/files/regex/: JMdictRegex.xml
